styles/getting-started/_getting-started-message.scss
$getting-started-message-margin: 15px;
$getting-started-message-arrow-size: 10px;
$getting-started-message-background: $light-100;
$getting-started-message-color: $dark-100;

@mixin getting-started-message-position-middle() {
  top: 50%;
  left: 50%;
  transform: translate(-50%, -50%);
  text-align: center;
  &:before {
    display: none;
  }
}
@mixin getting-started-message-position-top() {
  bottom: 100%;
  margin-bottom: $getting-started-message-margin;
  text-align: left;
}
@mixin getting-started-message-position-bottom() {
  top: 100%;
  margin-top: $getting-started-message-margin;
  text-align: left;
  &:before {
    right: $getting-started-message-arrow-size * 2;
    bottom: 100%;
    border-bottom-color: $getting-started-message-background;
  }
}
@mixin getting-started-message-position-left() {
  right: 100%;
  margin-right: $getting-started-message-margin;
  text-align: left;
  &:before {
    top: $getting-started-message-arrow-size * 2;
    left: 100%;
    border-left-color: $getting-started-message-background;
  }
}
@mixin getting-started-message-position-right() {
  left: 100%;
  margin-left: $getting-started-message-margin;
  text-align: right;
  &:before {
    top: $getting-started-message-arrow-size * 2;
    right: 100%;
    border-right-color: $getting-started-message-background;
  }
}

.getting-started-message {
  position: absolute;
  z-index: 400;
  max-width: 100vw;
  padding: 10px 15px;
  text-align: left;
  // The button controls already have bottom margin that creates breathing room
  // at the bottom of the message container
  padding-bottom: 0;
  border-radius: 10px;
  background-color: $getting-started-message-background;
  color: $getting-started-message-color;
  font-family: $font-family-sans-serif;
  font-size: $font-size-xs;
  box-shadow: 0 1px 10px 1px $dark-50;
  &:before {
    content: '';
    position: absolute;
    width: 0;
    height: 0;
    border-style: solid;
    border-width: $getting-started-message-arrow-size;
    border-color: transparent;
  }
  &.position-middle {
    @include getting-started-message-position-middle();
  }
  &.position-top {
    @include getting-started-message-position-top();
  }
  &.position-bottom {
    @include getting-started-message-position-bottom();
  }
  &.position-left {
    @include getting-started-message-position-left();
  }
  &.position-right {
    @include getting-started-message-position-right();
  }
  &.position-top.alignment-left,
  &.position-bottom.alignment-left {
    left: 0;
    text-align: left;
    &:before {
      left: $getting-started-message-arrow-size * 2;
    }
  }
  &.position-top.alignment-right,
  &.position-bottom.alignment-right {
    right: 0;
    text-align: right;
    &:before {
      right: $getting-started-message-arrow-size * 2;
    }
  }
}
.getting-started-message-controls {
  margin-top: 10px;
}
.getting-started-message-control {
  &:not(:last-child) {
    margin-right: 10px;
  }
  margin-bottom: 10px;
  @each $theme-name, $theme-color in $theme-colors {
    .theme-#{$theme-name} & {
      background-color: darken($theme-color, 0%);
      &:hover:active {
        background-color: darken($theme-color, 9%);
      }
    }
  }
  &.warning {
    background-color: $red;
    &:hover:active {
      background-color: darken($red, 10%);
    }
  }
}

